[package]
name = "revorbis-rs"
version = "0.0.4"
edition = "2024"
authors = ["0xAA55 <838816058@qq.com>"]
license-file = "LICENSE"
repository = "https://github.com/0xAA55-rs/revorbis-rs"
readme = "Readme.md"
description = "A try to rewrite libvorbis in Rust."
keywords = ["vorbis", "audio"]

[dependencies]
tinyogg = "^0"
copiablebuf = "^0"
shared_io_utils = "^0"
savagestr = "^0"

[lib]
name = "revorbis"
path = "src/lib.rs"
